--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.1.5",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.79.3",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
