--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.79.3",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
